--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/bono1212/08.node-hello#readme",
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6"
+    "jquery": "^3.5.1",
+    "pug": "^3.0.0"
   }
 }
